style.css
@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Bebas+Neue&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

body{
    background-color: #F3E7D3;
    margin: 0;
    overflow-x: hidden;
}

.pre-title{
    text-align: center;
    color: #3E2C1C;
    line-height: 40px;
    font-size: 40px;
    font-family: 'Bebas Neue', sans-serif;
}
.pre-title-blurb-underneath{
    text-align: center;
    color: #3E2C1C;
    font-size: 8px;
    margin-top: -30px;
    font-family: 'Bebas Neue', sans-serif;
}
h3{
    text-align: center;
    color: #3E2C1C;
    font-size: 30px;
    margin-top: 30px;
    font-family: 'Bebas Neue', sans-serif;
}
h4{    
    text-align: center;
    color: #3E2C1C;
    font-size: 92px;
    margin-bottom: 10px;
    margin-top: 0px;
    font-family: 'Bungee', sans-serif;

}
h5{
    text-align: center;
    color: #F7EDDF;
    font-size: 106px;
    margin-top: 10px;
    font-family: 'Bungee', sans-serif;
}

.hero-image{
    background-image: url("./imagefolder/image\ under\ title.jpg");
    height: 501px;
    margin-top: 0px; 
    padding-top: 250px;
    background-repeat: no-repeat;
    background-size: contain;
    width: 100%;
}

h6{
    color: #3E2C1C;
    font-size: 50px;
    margin: 50px;
    padding: 20px 150px;
    margin-bottom: 0px;
    width: 100%;
    margin-top: 100px;
    font-family: 'Inter', sans-serif;
}

.intro-text{
    width: 950px;
    margin-left: auto;
    margin-right: auto;
    font-family: 'Inter', sans-serif;
}
.content-intro{
    color: #3E2C1C;
    font-size: 21px; 
    width: 100%;
    text-align: left;
    line-height: 1.5;
    font-family: 'Inter', sans-serif;
}

.half-burger-image{
    margin-left: 255px;
}

.text-next-to-intro-image{
    color: #3E2C1C;
    font-size: 21px; 
    text-align: left;
    width: 420px;
    margin-top: -25px;
    font-family: 'Inter', sans-serif;
}

.two-columns{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 40px;
    margin-top: 50px;
}

.burger-collection-title{
    text-align: left;
    color: #3E2C1C;
    font-size: 60px;
    margin-left: 400px;
    margin-bottom: 0px;
    margin-top: 120px;
    width: 100px;
    line-height: 100px;    
    font-family: 'Bebas Neue', sans-serif;
}

.beef-section-title{
    text-align: center;
    color: #3E2C1C;  
    font-size: 25px;
}

.section-title{
    text-align: center;
    color: #3E2C1C;  
    font-size: 35px;
    margin-top: 100px;
    font-family: 'Bungee', sans-serif;
}

.three-columns {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 50px;
    width: 88%;
    margin: 0 auto;
}

.three-columns img{
    width: 100%;

}

.intro-paragraphs{
    width: 100%;
}

.burger-title {
    color: #3E2C1C;
    text-align: center;  
    font-size: 30px;     
    margin-top: 35px; 
    line-height: 8px;   
    font-family: 'Inter', sans-serif;
}

.burger-prompt{
    color: #3E2C1C;
    text-align: center;  
    font-size: 13px;     
    margin-top: 2px;    
    font-family: 'Inter', sans-serif;
    font-weight: 500; 
}

.card{
    height: 525px;
}

.quote-title{
    color: #3E2C1C;
    font-size: 40px;
    padding: 20px 150px;
    width: 100%;
    margin-top: 100px;
    margin-left: 155px;
    margin-bottom: 0px;
    padding-bottom: 0px;
    font-family: 'Bungee', sans-serif;
}

.quote{
    color: #3E2C1C;
    text-align: center;
    font-size: 30px;
    margin-top: 0px;
    margin-bottom: 50px;
    width: 100%;
    font-family: 'Inter', sans-serif;
}

.gratitude {
    color: #3E2C1C;
    text-align: left;  
    font-size: 25px;
    margin: 120px auto 0 auto;  
    width: 58%;  
    font-weight: bold;    
    font-family: 'Bungee', sans-serif;
}

.back-to-top {
    display: inline-block;
    margin-top: 30px;
    padding: 10px 15px;
    color: #3E2C1C;
    text-decoration: none;
    font-size: 16px;
    font-family: 'Inter', sans-serif;
}

.back-to-top:hover {
    background-color: #5a3e28;
}

html {
    scroll-behavior: smooth;
}

.back-to-top-container {
    text-align: center; 
    margin-top: 140px;  
}

.beef-section{
    background-color: #C49A6C;
}

.lamb-section { 
    background-color: #C49A6C; 
}

.pork-section { 
    background-color: #C49A6C; 
}

.burger-collection > div {
    padding: 60px 0;
  }

